# LinkedInalyzer

./: .gitignore  README.md  config.json.example  pyproject.toml
backend/: config.py  database.py  models.py
backend/analyzer/: gemini.py  pipeline.py
backend/api/: app.py  schemas.py
backend/api/routes/: authors.py  posts.py  stats.py
backend/scraper/: browser.py  cli.py  feed.py  selectors.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AuthorRow.tsx  Charts.tsx  Dashboard.tsx  LinkedInLogo.tsx  PostDetail.tsx  ScoreBadge.tsx  StatsBar.tsx  StatusSelect.tsx
frontend/src/hooks/: useAuthors.ts
