[project]
name = "linkedinalyzer"
version = "0.1.0"
description = "Analyze LinkedIn feed for political content and AI slop"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "google-genai>=1.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "pydantic>=2.5",
]

[project.scripts]
linkedinalyzer = "backend.scraper.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
